--- a/forest_people_intro.html
+++ b/forest_people_intro.html
@@ -25,7 +25,7 @@ class: center, middle, inverse, title-slide
 
 # A _Caatinga_, seus povos e suas florestas
 .center[
-&lt;img src="img/caat.png" width="696" /&gt;
+&lt;img src="img/caat.png" width="60%" /&gt;
 ]
 ---
 # A Caatinga, seus _povos_ e suas florestas
@@ -34,14 +34,14 @@ class: center, middle, inverse, title-slide
 
 ---
 # A Caatinga, seus povos e suas _florestas_
-
-&lt;img src="img/mapbiom_caat.png" width="2020" /&gt;
-
+.center[
+&lt;img src="img/mapbiom_caat.png" width="80%" /&gt;
+]
 
 ---
 # OBJETIVO: Medir a sensibilidade do socioecossistema da Caatinga às mudanças climáticas
 .center[
-&lt;img src="img/vulner.png" width="80%" /&gt;
+&lt;img src="img/vulner.png" width="70%" /&gt;
 ]
 
 ---
@@ -100,7 +100,6 @@ class: center, middle, inverse, title-slide
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
-<script src="macros.js"></script>
 <script>var slideshow = remark.create({
 "highlightStyle": "github",
 "highlightLines": true,
